--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
 
+    <string name="durationformatshort">%2$d:%3$02d</string>
+    <string name="durationformatlong">%1$d:%2$02d:%3$02d</string>
 </resources>
