--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
 
     <string name="durationformatshort">%2$d:%3$02d</string>
     <string name="durationformatlong">%1$d:%2$02d:%3$02d</string>
+    <string name="view_fragment_bottom_mode_normal">顺序播放</string>
+    <string name="view_fragment_bottom_mode_shuffle">随机播放</string>
+    <string name="view_fragment_bottom_mode_repeat">单曲循环</string>
 </resources>
