--- a/video/src/main/res/values/strings.xml
+++ b/video/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="view_fragment_bottom_mode_normal">顺序播放</string>
     <string name="view_fragment_bottom_mode_shuffle">随机播放</string>
     <string name="view_fragment_bottom_mode_repeat">单曲循环</string>
+    <string name="primary_color">颜色</string>
+    <string name="color_chooser_back">后退</string>
+    <string name="color_chooser_done">完成</string>
+    <string name="color_chooser_cancel">取消</string>
+    <string name="color_chooser_custom">自定义</string>
+    <string name="color_chooser_preset">系统</string>
 </resources>
