--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">集成</string>
+    <string name="app_name">微地</string>
     <string name="explain">点击下面跳转到单独模块，这界面仅仅是一个空壳app工程,
     下面的模块可以单独调试，单独运行，解耦，采用目前主流的开发框架:
     Rxjava2+retrofit+mvp+dagger2+RxbusManager,
