--- a/commonlibrary/src/main/res/values/strings.xml
+++ b/commonlibrary/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">common</string>
 
     <string name="behavior_footer">com.example.commonlibrary.customview.behavior.FooterBehavior</string>
+    <string name="behavior_scale_fab">com.example.commonlibrary.customview.behavior.FabScaleBehavior</string>
 
 </resources>
