--- a/chat/src/main/res/values/strings.xml
+++ b/chat/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">地倾</string>
-    <string name="register_text1">忘记密码</string>
-    <string name="register_text2">立即注册</string>
+    <string name="register_text1">找回密码</string>
+    <string name="register_text2">注册</string>
     <string name="login">登录</string>
     <string name="login_password_hint">请输入密码</string>
     <string name="login_username_hint">请输入用户名</string>
